Fix Login button id: login -> loginBtn

--- a/WebSite/Pages/Index.cshtml
+++ b/WebSite/Pages/Index.cshtml
@@ -28,8 +28,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" align="right" style="width: 100px" id="buttons">
-                        <button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="login">Login</button>
-                        @*<button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="loginBtn">Login</button>*@
+                        <button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="loginBtn">Login</button>
                         <button type="button" class="btn btn-sm btn-warning remind" onclick="RemindPassword()" title="remind" id="remindBtn">Remind password</button>
                     </td>
                 </tr>
