Add Login Page (#1)
* Add Login Without Password Test

* Add Login Without User Name Test

* Add Login With Empty Fields Test

* Enable action: build&run tests

* Edit action: run on Windows instead of Ubuntu

* Fix Login button id: login -> loginBtn

* Add Login Field Signature Test

* Edit expected result for 'LoginFieldSignatureTest' (according to requirements)

* Login filed should be labeled 'User' but labeled 'Login'

* Change expected signature results according to requirements in README file

* Add Valid Login Test

* #3 Fix 'User' label

* #2 Fix 'Password' label

* Update locators after fixing

 - change locators for 'Login' CTA button;
- change assertion for Valid Login Test.

* Merge 3 tests to 1

* Change locators for login and password fields

* Implement Page Object Model

* Create method Login

* Add Explicit Wait

* Downgrade chrome driver to version 106

* Changed error msg text (Incorrect credentials)

* Fix 'Incorrect credentials' bug

--- a/WebSite/Pages/Index.cshtml
+++ b/WebSite/Pages/Index.cshtml
@@ -13,13 +13,13 @@
 
             <table>
                 <tr>
-                    <th class="user">Login:</th>
+                    <th class="user">User:</th>
                     <td>
                         <input id="login" />
                     </td>
                 </tr>
                 <tr>
-                    <th class="pass">Pasword:</th>
+                    <th class="pass">Password:</th>
                     <td>
                         <input type="password" id="password" />
                     </td>
@@ -28,8 +28,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" align="right" style="width: 100px" id="buttons">
-                        <button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="login">Login</button>
-                        @*<button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="loginBtn">Login</button>*@
+                        <button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="loginBtn">Login</button>
                         <button type="button" class="btn btn-sm btn-warning remind" onclick="RemindPassword()" title="remind" id="remindBtn">Remind password</button>
                     </td>
                 </tr>
