--- a/WebSite/Pages/Calculator.cshtml
+++ b/WebSite/Pages/Calculator.cshtml
@@ -24,7 +24,7 @@
                         <td>%</td>
                     </tr>
                     <tr>
-                        <td>Investment Term: *</td>
+                        <td>Investment term: *</td>
                         <td colspan="2"><input id="term" oninput="VerifyTerm('term', 0);" /></td>
                     </tr>
                     <tr>
