#6 fix 'Start date' label

--- a/WebSite/Pages/Calculator.cshtml
+++ b/WebSite/Pages/Calculator.cshtml
@@ -28,7 +28,7 @@
                         <td colspan="2"><input id="term" oninput="VerifyTerm('term', 0);" /></td>
                     </tr>
                     <tr>
-                        <td>Start Date:</td>
+                        <td>Start date:</td>
                         <td colspan="2">
                             <select id="day" onchange="CalculateDate()"></select>
                             <select id="month" onchange="ResetMonth();CalculateDate();"></select>
