--- a/WebSite/Pages/Calculator.cshtml
+++ b/WebSite/Pages/Calculator.cshtml
@@ -36,7 +36,7 @@
                         </td>
                     </tr>
                     <tr id="finYear">
-                        <td>Financial Year: *</td>
+                        <td>Financial year: *</td>
                         @*<td><input type="radio" onchange="SetYear(360)" checked="checked">365 days</td>*@
                         <td><input type="radio" onchange="SetYear(360)">365 days</td>
                         <td><input type="radio" onchange="SetYear(365)">360 days</td>
