#14 fix 'End date' label

--- a/WebSite/Pages/Calculator.cshtml
+++ b/WebSite/Pages/Calculator.cshtml
@@ -54,7 +54,7 @@
                         <th><input id="income" readonly /></th>
                     </tr>
                     <tr>
-                        <th>End Date: *</th>
+                        <th>End date: *</th>
                         <th><input id="endDate" readonly /></th>
                     </tr>
                     <tr><td colspan="3">* - mandatory fields</td></tr>
